archive/gateway-api/gateway.yaml
# gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: gateway-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.pukarsubedi.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.pukarsubedi.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: pukarsubedi-com-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
